# aoc2025

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
src/days/day1/: mod.rs
src/days/day10/: mod.rs
src/days/day11/: mod.rs
src/days/day12/: mod.rs
src/days/day2/: mod.rs
src/days/day3/: mod.rs
src/days/day4/: mod.rs
src/days/day5/: mod.rs
src/days/day6/: mod.rs
src/days/day7/: mod.rs
src/days/day8/: mod.rs
src/days/day9/: mod.rs
