[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

[lib]
name = "aoc25"
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4.rs"

[[bin]]
name = "day5"
path = "src/bin/day5.rs"

[[bin]]
name = "day6"
path = "src/bin/day6.rs"

[[bin]]
name = "day7"
path = "src/bin/day7.rs"

[[bin]]
name = "day8"
path = "src/bin/day8.rs"

[[bin]]
name = "day9"
path = "src/bin/day9.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/day12.rs"
